more work on conclusion, switched makefile back to explicit listing of figure deps

--- a/references.bib
+++ b/references.bib
@@ -264,7 +264,7 @@
 }
 
 @unpublished{branicky2002detvsprobroadmaps,
-   author = {Michael S. Branicky and Steven M. LaValle and Kari Olson,
+   author = {Michael S. Branicky and Steven M. LaValle and Kari Olson
       and Libo Yang},
    title = {Deterministic vs. Probabalistic Roadmaps},
    note = {Submitted to IEEE Trans. on Robotics and Autamation},
@@ -354,6 +354,7 @@
    year = {2004},
    institution = {Dept. of Computer Science, University of Illinois},
    url = {http://msl.cs.uiuc.edu/~pcheng1/papers/rc04.pdf},
+   note = {},
 }
 
 === From RI website ===
@@ -1805,7 +1806,7 @@
       lattices},
    booktitle = {The 8th International Symposium on Artificial
       Intelligence, Robotics and Automation in Space},
-   month = sept,
+   month = sep,
    year = {2005},
 }
 
