--- a/thesis.tex
+++ b/thesis.tex
@@ -4,6 +4,7 @@
 
 % marginfigure textwidth is 144.0pt = 5.0610cm
 % main line width = 10.96 cm
+% figure* width = 16.86 cm
 
 \usepackage{natbib}
 \usepackage[nottoc]{tocbibind} % for fig/table lists in toc
