convert defense makefile to explicit as well

--- a/defense.tex
+++ b/defense.tex
@@ -115,9 +115,9 @@ Lydia Kavraki, Rice University}
    %\end{columns}
 \end{frame}
 
-\input{defense-p0-intro}
-\input{defense-p1-utility}
-\input{defense-p2-lazysp}
+%\input{defense-p0-intro}
+%\input{defense-p1-utility}
+%\input{defense-p2-lazysp}
 \input{defense-p3-ibid}
 \input{defense-p4-utility-results}
 \input{defense-p5-family}
